# anki-poems

./: .gitignore  CLAUDE.md  README.md  add_new_poem.py  demo.apkg  fetch_poem.py  final_poetry.apkg  final_test.apkg  main.py  poetry.apkg  poetry_cli.py  poetry_core.py  poetry_errors.py  poetry_to_anki.py  poetry_to_anki_refactored.py  pyproject.toml  requirements.txt  test_poetry.apkg  test_poetry_to_anki.py  test_url_poem.md
poems/: William Blake::The Tyger.txt  William Shakespeare::Sonnet 18.txt  a-bird-came-down-the-walk-359.md  after-great-pain-a-formal-feeling-comes-372.md  annabel-lee.md  at-the-fishhouses.md  brooklyn_ferry.md  do_not_go_gentle.txt  edgar-allan-poe_the-raven.md  faith-is-a-fine-invention-202.md  funeral-blues.md  i-m-nobody-who-are-you.md  ode-on-a-grecian-urn.md  ozymandias.md  ozymandias.txt  sonnet_18.md  sonnet_18.txt  stop_for_death.md  the-emperor-of-ice-cream.md  the-negro-speaks-of-rivers.md  the-new-colossus.md  the_tyger.txt  we-wear-the-mask.md
src/anki_poems/: __init__.py  __main__.py  add_poem.py  cli.py  core.py  fetch_poem.py
tests/: test_add_new_poem.py  test_cli.py  test_fetch_poem.py  test_metadata.py  test_parsing.py  test_rendering.py  test_shuffling.py  test_windowing.py
