[project]
name = "anki-poems"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bleach>=6.1.0",
    "genanki>=0.13.1",
    "markdown-it-py>=3.0.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
