[project]
name = "anki-poems"
version = "0.1.0"
description = "Convert poetry Markdown files into Anki cloze-deletion decks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bleach>=6.1.0",
    "genanki>=0.13.1",
    "markdown-it-py>=3.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
anki-poems = "anki_poems.cli:main"
anki-poems-add = "anki_poems.add_poem:main"
anki-poems-fetch = "anki_poems.fetch_poem:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
